unpackaged/main/default/objects/zkfedex__Checkpoint__c/zkfedex__Checkpoint__c.object-meta.xml
<CustomObject>
    <label>FedEx Checkpoint</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>FedEx Checkpoint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Checkpoints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>