unpackaged/main/default/objects/zkfedex__Checkpoint__c/fields/zkfedex__City__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>