unpackaged/main/default/objects/zkfedex__Checkpoint__c/fields/zkfedex__EventDescription__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EventDescription__c</fullName>
    <label>Event Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>