unpackaged/main/default/objects/zkfedex__Checkpoint__c/fields/zkfedex__EventType__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__EventType__c</fullName>
    <label>Event Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>