unpackaged/main/default/objects/zkfedex__Checkpoint__c/fields/zkfedex__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>