unpackaged/main/default/objects/zkfedex__Checkpoint__c/fields/zkfedex__Shipment__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__Shipment__c</fullName>
    <label>FedEx Shipment</label>
    <referenceTo>zkfedex__Shipment__c</referenceTo>
    <relationshipLabel>FedEx Checkpoints</relationshipLabel>
    <relationshipName>FedEx_Checkpoints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>