unpackaged/main/default/objects/zkfedex__Checkpoint__c/fields/zkfedex__StatusExceptionCode__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__StatusExceptionCode__c</fullName>
    <label>Status Exception Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>